added tables for all entities and updated routes for all pages

--- a/templates/main.j2
+++ b/templates/main.j2
@@ -9,7 +9,12 @@
     <nav>
         Navigation: 
         <a href="/">Home</a>
-        <a href="/bsg-people">BSG People</a>
+        <a href="/polish-types">Polish Types</a>
+        <a href="/polishes">Polishes</a>
+        <a href="/customers">Customers</a>
+        <a href="/orders">Orders</a>
+        <a href="/polish-orders">Polish Orders</a>
+        <a href="/customer-favorites">Customer Favorites</a>
     </nav>
 
     {% block content %}{% endblock %}
