--- a/templates/main.j2
+++ b/templates/main.j2
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>CS340 - My Project</title>
+    <title>Gloss & Query</title>
     <link href='static/style.css' rel='stylesheet' />
 </head>
 <body>
