--- a/templates/home.j2
+++ b/templates/home.j2
@@ -1,9 +1,7 @@
 {% extends "main.j2" %}
 {% block content %}
 
-<h1>Home page</h1>
-<div class="homepageDescription">
-    <p>Developer information and Project overview here.</p>
-</div>
+<h1>Gloss and Query</h1>
+
 
 {% endblock %}
