updated Customer to show name based on updated query and deleted commented that I don't need anymore

--- a/templates/customer-favorites.j2
+++ b/templates/customer-favorites.j2
@@ -35,7 +35,6 @@
     </tbody>
   </table>
 
-  <!-- One hidden edit-table per row, rendered after the main table -->
   {% for row in favorites %}
     <table id="edit-table-{{ loop.index0 }}"
            class="edit-table"
@@ -51,7 +50,7 @@
       <tbody>
         <tr>
          <td>
-    {{ row.fName }} {{ row.lName }}
+    {{ row.Customer }}
   </td>
   <td>
     <select name="polishID">
