--- a/templates/customer-favorites.j2
+++ b/templates/customer-favorites.j2
@@ -54,20 +54,15 @@
   </td>
   <td>
     <select name="polishID">
-      <option
-        value="Sagebrush"
-      >
-      Sagebrush
-      </option>
-       <option
-        value="Root of all evil"> Root of all evil
-         </option>
-         <option
-        value="Castle of cobwebs">
-        Castle of cobwebs
-        </option>
-
-    </select>
+    {% for polish in polishes_dropdown %}
+    <option
+  value="{{ polish.name }}"
+  {% if polish.name == row.Polish %}selected{% endif %}
+>
+  {{ polish.name }}
+</option>
+    {% endfor %}
+  </select>
   </td>
   <td>
     <button type="button"
