--- a/static/style.css
+++ b/static/style.css
@@ -88,6 +88,11 @@ nav a:hover {
 }
 
 body > :not(nav) {
-  margin-left: 240px;   
+  margin-left: 300px;   
   padding: 2rem;
+}
+
+.logo {
+    margin-left: auto;
+    margin-right: auto;
 }
