--- a/templates/main.j2
+++ b/templates/main.j2
@@ -15,6 +15,7 @@
         <a href="/orders">Orders</a>
         <a href="/polish-orders">Polish Orders</a>
         <a href="/customer-favorites">Customer Favorites</a>
+        <a href="/reset">Reset</a>
     </nav>
 
     {% block content %}{% endblock %}
