--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,12 @@ h1 {
   color: #666;
 }
 
+h2 {
+   font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
 
 .cuForm {
     margin-left: 32px;
@@ -133,7 +139,7 @@ button {
   border:none;
   font-size: 16px;   
   letter-spacing: .08em;   
-  text-transform: uppercase;   
+  /* text-transform: uppercase;    */
   transition: background 0.2s;
   &:focus,   
   &:hover {  
@@ -153,7 +159,7 @@ select {
   padding: 8px 24px;
   font-size: 16px;
   letter-spacing: .08em;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   box-shadow: 0 0 12px -2px rgba(0, 0, 0, 0.5);
   transition: background 0.2s;
   appearance: none;
@@ -183,3 +189,28 @@ select:active {
   color: white;
 }
 
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"] {
+
+   border: 2px solid #8BDDDB;
+  color: black;
+  border-radius: 4px;
+  padding: 8px 24px;
+  font-size: 16px;
+  letter-spacing: .08em;
+  /* text-transform: uppercase; */
+  box-shadow: 0 0 12px -2px rgba(0, 0, 0, 0.5);
+  transition: background 0.2s;
+
+
+}
+
+#add-polish{
+      width: 1000px;
+    padding: 20px;
+    margin-top: 20px;
+  box-shadow:
+    0 2px 4px rgba(0, 0, 0, 0.1),
+    0 6px 12px rgba(0, 0, 0, 0.08);
+}
