--- a/static/style.css
+++ b/static/style.css
@@ -214,3 +214,64 @@ input[type="datetime-local"] {
     0 2px 4px rgba(0, 0, 0, 0.1),
     0 6px 12px rgba(0, 0, 0, 0.08);
 }
+
+.cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding: 2rem;
+}
+
+.cards-wrapper .card {
+  flex: 0 0 250px;  
+  width: 250px;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  transition: box-shadow 0.3s;
+  display: flex;
+  flex-direction: column;
+}
+
+.img-wrap {
+  width: 100%;
+  height: 200px;     
+  overflow: hidden;
+}
+
+.img-wrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.4s ease;
+}
+
+.img-wrap:hover img {
+  transform: scale(1.2);
+}
+
+.container {
+  padding: 20px;
+}
+h4 {
+   font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.card-link {
+  display: block;      
+  text-decoration: none;
+  color: inherit;
+}
+.card-link:focus,
+.card-link:hover .card {
+  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+a {
+  margin: 0;
+  padding: 0;
+}
