updated front page caption for orders icon

--- a/templates/home.j2
+++ b/templates/home.j2
@@ -61,7 +61,7 @@
     </div>
     <div class="container">
       <h4><b>Orders</b></h4>
-      <p>Search our polish types database.</p>
+      <p>Check out our orders database.</p>
     </div>
   </div>
   </a>
