--- a/templates/polish-orders.j2
+++ b/templates/polish-orders.j2
@@ -143,7 +143,7 @@
 
 
  <!-- CREATE NEW ORDER -->
-  <button id="toggle-create-order-btn" type="button">Create a new order</button>
+  <button id="toggle-create-order-btn" type="button">Create Order</button>
 
   <div id="create-order-container" style="display: none; margin-top: 40px;">
     <h2>Create New Order</h2>
@@ -178,7 +178,7 @@
           </tr>
         </tbody>
       </table>
-      <button type="submit" style="margin-top:0.5em;">Create Order</button>
+      <button type="submit" style="margin-top:0.5em;">Submit Order</button>
     </form>
   </div>
 
