--- a/templates/main.j2
+++ b/templates/main.j2
@@ -31,7 +31,10 @@
         <a href="/orders">Orders</a>
         <a href="/polish-orders">Polish Orders</a>
         <a href="/customer-favorites">Customer Favorites</a>
-        <a href="/reset">Reset</a>
+        <a href="/reset" onclick="return confirm('Are you sure you want to reset the database? This cannot be undone.');">
+  Reset
+</a>
+
     </nav>
 
     {% block content %}{% endblock %}
